// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Slider can be disabled 1`] = `
<div
  aria-disabled="true"
  aria-label=""
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="mdc-slider mdc-slider--disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`components/Slider can be discrete 1`] = `
<div
  aria-label=""
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="mdc-slider mdc-slider--discrete"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <div
      className="mdc-slider__pin"
    >
      <span
        className="mdc-slider__pin-value-marker"
      >
        0
      </span>
    </div>
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`components/Slider can have a display marker 1`] = `
<div
  aria-label=""
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="mdc-slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`components/Slider can have a label 1`] = `
<div
  aria-label="foo"
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="mdc-slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`components/Slider can have a presetted max value 1`] = `
<div
  aria-label=""
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="mdc-slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`components/Slider can have a presetted min value 1`] = `
<div
  aria-label=""
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="mdc-slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;

exports[`components/Slider can have a presetted value 1`] = `
<div
  aria-label=""
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="mdc-slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="slider"
  tabIndex="0"
>
  <div
    className="mdc-slider__track-container"
  >
    <div
      className="mdc-slider__track"
      style={undefined}
    />
  </div>
  <div
    className="mdc-slider__thumb-container"
  >
    <svg
      className="mdc-slider__thumb"
      height="21"
      width="21"
    >
      <circle
        cx="10.5"
        cy="10.5"
        r="7.875"
      />
    </svg>
    <div
      className="mdc-slider__focus-ring"
    />
  </div>
</div>
`;
